compilation.out
Executing the C code of file './material/code-generation-tests/OK_GER06.c'
7 1 2 3 4 5 6 7
7 1 2 3 4 5 6 7 
Error when compiling the C code of file './material/code-generation-tests/OK_GER13.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER13.c:128:5: error: unknown type name ‘_class_Program’
  128 |     _class_Program *_program;
      |     ^~~~~~~~~~~~~~
./material/code-generation-tests/OK_GER13.c: In function ‘_Program_run’:
./material/code-generation-tests/OK_GER13.c:160:29: warning: passing argument 2 of ‘_Program_m’ from incompatible pointer type [-Wincompatible-pointer-types]
  160 |     _b = (_Program_m)(self, _b);
      |                             ^~
      |                             |
      |                             _class_B * {aka struct _St_B *}
./material/code-generation-tests/OK_GER13.c:138:55: note: expected ‘_class_A *’ {aka ‘struct _St_A *’} but argument is of type ‘_class_B *’ {aka ‘struct _St_B *’}
  138 | _class_B* _Program_m( _class_Program *self, _class_A *_a) {
      |                                             ~~~~~~~~~~^~
./material/code-generation-tests/OK_GER13.c:181:20: warning: assignment to ‘int *’ from incompatible pointer type ‘_class_Program *’ {aka ‘struct _St_Program *’} [-Wincompatible-pointer-types]
  181 |     self->_program = new_Program();
      |                    ^
./material/code-generation-tests/OK_GER13.c:182:20: error: request for member ‘vt’ in something not a structure or union
  182 |     (self->_program->vt[0] )(self->_program);
      |                    ^~
Executing the C code of file './material/code-generation-tests/OK_GER01.c'
7 0 1 2 3 4 5 6 7
7 0 1 2 3 4 5 6 7 
Executing the C code of file './material/code-generation-tests/OK_GER02.c'
6 1 2 3 4 5 6
6 1 2 3 4 5 6 
Executing the C code of file './material/code-generation-tests/OK_GER03.c'
6 1 2 3 4 5 6
6 1 2 3 4 5 6 
Executing the C code of file './material/code-generation-tests/OK_GER04.c'
61 2 3 4 5 6
61 2 3 4 5 6 
Executing the C code of file './material/code-generation-tests/OK_GER05.c'

Ok-ger05
The output should be what you give as input.
Type in six numbers
Executing the C code of file './material/code-generation-tests/OK_GER07.c'
0
0
Executing the C code of file './material/code-generation-tests/OK_GER08.c'
1 1 2 2 3 3 4 5 6 7
1 1 2 2 3 3 4 5 6 7 
Executing the C code of file './material/code-generation-tests/OK_GER09.c'
1 1 2 2 3 3 4 4
1 1  2 2  3 3  4 4
 
Executing the C code of file './material/code-generation-tests/OK_GER10.c'
Error when executing the code generated by the C compiler (exit code 139)
Executing the C code of file './material/code-generation-tests/OK_GER11.c'
4 1 2 3 4
4 1  2 3  2 
Executing the C code of file './material/code-generation-tests/OK_GER12.c'
1 2 1 2 1 2 1 2
1 2 1 2 1 2 1 2 
Error when compiling the C code of file './material/code-generation-tests/OK_GER14.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER14.c: In function ‘_Program_run’:
./material/code-generation-tests/OK_GER14.c:184:25: error: invalid use of void expression
  184 |     printf("%d", (_d->vt[6] )(_d));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER14.c:187:25: error: invalid use of void expression
  187 |     printf("%d", (_c->vt[4] )(_c));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER14.c:190:25: error: invalid use of void expression
  190 |     printf("%d", (_b->vt[2] )(_b));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER14.c:193:25: error: invalid use of void expression
  193 |     printf("%d", (_a->vt[0] )(_a));
      |                  ~~~~~~~^~~~~~~~~
Executing the C code of file './material/code-generation-tests/OK_GER15.c'
1 2 1 2 3 4 3 4 5 6 5 6
1 2 1 2 1 2 1 2 5 6 5 6 
Error when compiling the C code of file './material/code-generation-tests/OK_GER16.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER16.c: In function ‘_A_print’:
./material/code-generation-tests/OK_GER16.c:59:27: error: invalid use of void expression
   59 |     printf("%d", (self->vt[0] )(self));
      |                  ~~~~~~~~~^~~~~~~~~~~
./material/code-generation-tests/OK_GER16.c: In function ‘_B_print’:
./material/code-generation-tests/OK_GER16.c:99:27: error: invalid use of void expression
   99 |     printf("%d", (self->vt[4] )(self));
      |                  ~~~~~~~~~^~~~~~~~~~~
./material/code-generation-tests/OK_GER16.c:101:27: error: invalid use of void expression
  101 |     printf("%d", (self->vt[0] )(self));
      |                  ~~~~~~~~~^~~~~~~~~~~
./material/code-generation-tests/OK_GER16.c: In function ‘_Program_run’:
./material/code-generation-tests/OK_GER16.c:165:25: error: invalid use of void expression
  165 |     printf("%d", (_b->vt[4] )(_b));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER16.c:172:25: error: invalid use of void expression
  172 |     printf("%d", (_a->vt[0] )(_a));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER16.c:174:25: error: invalid use of void expression
  174 |     printf("%d", (_b->vt[0] )(_b));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER16.c:177:25: error: invalid use of void expression
  177 |     printf("%d", (_a->vt[0] )(_a));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-tests/OK_GER16.c:180:25: error: invalid use of void expression
  180 |     printf("%d", (_c->vt[4] )(_c));
      |                  ~~~~~~~^~~~~~~~~
Error when compiling the C code of file './material/code-generation-tests/OK_GER21.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER21.c: In function ‘_Program_print’:
./material/code-generation-tests/OK_GER21.c:83:19: error: ‘_Program_get’ undeclared (first use in this function); did you mean ‘_Program_set’?
   83 |     printf("%d", (_Program_get)(self->_a));
      |                   ^~~~~~~~~~~~
      |                   _Program_set
./material/code-generation-tests/OK_GER21.c:83:19: note: each undeclared identifier is reported only once for each function it appears in
Executing the C code of file './material/code-generation-tests/OK_GER22.c'
100
100
Cianeto compiler finished
